formatted the date and times on events and details according to the needs of the input, allows for full edit now. Image upload not quite getting to api but partially complete. Issue still with Home footer not sticking with media query flex-wrap

--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -1,3 +1,4 @@
+
 hr {
   width: 95%;
   border: none;
@@ -73,6 +74,7 @@ hr {
 .cards-container {
   display: flex;
   justify-content: space-around;
+  height: 600px;
 }
 
 .cards {
